# lets-plot

./: .gitignore  .travis.yml  CHANGELOG.md  COPYRIGHT_NOTICE.md  LICENSE  README.md  README_PYTHON.md  RELEASE.md  RELEASE_RC.md  TERMS.md  THIRD_PARTY_LICENSES.md  build.gradle  build.gradle.kts  build_release.py  build_settings.template.yml  future_changes.md  gradle.properties  local.properties.template  settings.gradle  settings.gradle.kts
python-package/: HOWTO_JUPYTER.txt  HOWTO_PYPI_PUBLISH.txt  IDE_MODULE_SETUP.md  PACKAGE_BUILDING.md  README.md  SETUP.txt  TEST_ENVS.md  build.gradle  build_release.py  module_env.yml  setup.cfg  setup.py  test_env_basic.yml  test_env_empty.yml  test_env_extended.yml
python-package/datalore/frontend_context/: frontend_context.py  jupyter_notebook.py  sandbox.py
python-package/datalore/plot/: __init__.py  coord.py  core.py  facet.py  geom.py  geom_extras.py  geom_image_.py  geom_livemap_.py  guide.py  hello.py  image_matrix.py  label.py  plot.py  pos.py  response_util.py  sandbox_.py  scale.py  scale_identity.py  theme_.py  util.py
python-package/datalore_plot/: __init__.py  _global_settings.py  _version.py
python-package/datalore_plot/frontend_context/: __init__.py  frontend_context.py  (+2 more)
python-package/dlrplot/: _version.py
python-package/kotlin-bridge/: datalore_plot_kotlin_bridge.c  lets_plot_kotlin_bridge.c  posix_obsolete_stubs.c
python-package/lets_plot/: __init__.py  _global_settings.py  _kbridge.py  _type_utils.py  _version.py  mapping.py  settings_utils.py  tilesets.py
python-package/licenses/: LICENSE.FreeType
(+13658 files in other folders)
