# https://setuptools.readthedocs.io/en/latest/setuptools.html#metadata
[metadata]
license_files = ../LICENSE
; long_description =
;   file: ../README.md
;   file: ../CHANGELOG.md

# Added for Windows to prevent using MSVC tools instead of MinGW. Related issues:
# - https://github.com/pypa/build/issues/533
# - https://github.com/pypa/setuptools/issues/3681
[build]
compiler=mingw32

[build_ext]
compiler=mingw32
